fix: center text on footer on small screen closes #64

--- a/app/globals.css
+++ b/app/globals.css
@@ -42,3 +42,7 @@ html {
   scroll-behavior: smooth;
   scroll-padding-top: 5em;
 }
+
+* {
+  outline: red solid 1px;
+}
